# WBSMonitor

./: .env.example  .gitignore  .replit  AI_AGENTIC_TRANSFORMATION_SUMMARY.md  README.md  api.py  app.py  config.py  create_sample_wbs.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit.md  scheduler.py  start_system.sh  start_ui.sh  test_ai_agentic.py  test_ai_categorization.py  test_azure_ai.py  test_smtp.py  vite.config.ts
.local/state/replit/agent/: progress_tracker.md
agents/: data_ingestion_agent.py  dependency_tracker_agent.py  email_generation_agent.py  escalation_manager_agent.py  plan_update_agent.py  risk_analysis_agent.py  self_healing_agent.py  supervisor_agent.py
attached_assets/: Pasted--Error-in-monitoring-cycle-PlanUpdateAgent-object-has-no-attribute-recalculate-timelines-Trac-1763408446935_1763408446936.txt  Pasted--Step-2-6-Risk-Analysis-Agent-Analyzing-task-risks-AI-analyzing-72-tasks-autonomously--1763394842122_1763394842122.txt  Pasted-Traceback-most-recent-call-last-File-C-Users-HP-Downloads-WBSMonitor-19-WBSMonitor-main-py-1763408620757_1763408620758.txt  Usecases_1762163458589.xls
data/: email_tracker.json  healing_history.json  healing_notifications.json  project_wbs.xlsx
src/: App.css  App.tsx  Chatbot.css  Chatbot.tsx  NotificationIcon.css  NotificationIcon.tsx
utils/: ai_decision_engine.py  azure_ai_client.py  date_calculator.py  email_sender.py  email_tracker.py  excel_parser.py  sharepoint_client.py
